cluster/apps/firefly/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly-iii
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
