cluster/apps/firefly/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: firefly-iii
  labels:
    app: postgres
spec:
  clusterIP: None
  ports:
    - port: 8080
  selector:
    app: postgres
