cluster/apps/firefly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    name: firefly-iii
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: "Cf-Access-Authenticated-User-Email"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
spec:
  ingressClassName: nginx
  rules:
  - host: firefly.${DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: firefly-iii
            port: 
              number: 8080
  tls:
    - hosts:
      - firefly.${DOMAIN}
      secretName: firefly-cert
